--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <!--
+    Android 10 trở xuống: READ/WIRTE_EXTERNAL_STORAGE
+    Android 11,12: READ_EXTERNAL_STORAGE
+    Android 13: READ_MEDIA_IMAGES, READ_MEDIA_VIDEO, READ_MEDIA_AUDIO
+    -->
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="29" />
+
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -11,24 +26,59 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidTutorial">
-        <!--        yeu cau khi tu mainActivity sang app khac thì yeu cau phải có permission dc dinh nghia-->
+
+        <!--        Hoạt động giống singleTask, nhưng activity này sẽ luôn chạy trong một task riêng biệt (chỉ chứa nó).
+        Không có activity nào khác có thể nằm chung task với nó.-->
         <activity
-            android:name="com.eco.androidtutorial.ThirdActivity"
+            android:name=".launchmode.FourthActivity"
             android:exported="false"
-            android:permission="com.google.socialapp.permission.SHARE_POST" />
+            android:launchMode="singleTask" />
+
+        <!--     Default: Trong một task, chỉ có duy nhất một instance của activity đó.
+        Nếu activity đã tồn tại ở dưới stack, toàn bộ activity ở trên nó sẽ bị xóa (finish), và activity đó sẽ được đưa lên đỉnh. Sau đó gọi onNewIntent().-->
         <activity
-            android:name=".ExampleActivity"
+            android:name=".launchmode.HomeActivity"
+            android:exported="false"
+            android:launchMode="standard"
+            android:permission="com.google.socialapp.permission.SHARE_POST" />
+
+
+        <!--   Nếu trên đỉnh stack đã có sẵn activity đó, hệ thống sẽ không tạo mới mà gọi onNewIntent().
+            Nếu không có vẫn tạo bình thường-->
+
+        <activity
+            android:name=".launchmode.NotificationActivity"
+            android:exported="false"
+            android:launchMode="singleTop" />
+
+        <!--        một instance mới của Activity sẽ được tạo và đưa vào stack, dù Activity đó đã có trước đó.-->
+        <activity
+            android:name=".launchmode.FirstActivity"
+            android:exported="false"
+            android:launchMode="standard" />
+
+        <activity
+            android:name=".permission.SelectImageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterForActivityResultExampleActivity"
+            android:exported="false" /> <!-- yeu cau khi tu mainActivity sang app khac thì yeu cau phải có permission dc dinh nghia -->
+        <activity
+            android:name=".IntentFilterExampleActivity"
             android:exported="false">
-            <!--            intent-filter> dung de khai bao action cho activity, -->
-            <!--            Cho phep khoi tao 1 activity tu process khac-->
+
+            <!-- intent-filter> dung de khai bao action cho activity, -->
+            <!-- Cho phep khoi tao 1 activity tu process khac -->
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".SecondaryActivity"
+            android:name=".NavigateExampleActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
@@ -42,4 +92,3 @@
     </application>
 
 </manifest>
-
