--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidTutorial">
         <activity
+            android:name=".ui.CalculatorActivity"
+            android:exported="false" />
+        <activity
             android:name=".managementbackstack.manifestattributes.taskaffinity.SecondaryTaskAffinityActovity"
             android:exported="false" />
         <activity
@@ -63,7 +66,6 @@
         <activity
             android:name=".senddatabetweenactivity.SenderActivity"
             android:exported="false" />
-
         <activity
             android:name=".managementbackstack.manifestattributes.launchmode.AlarmRingActivity"
             android:exported="false"
